Fix z-index drag&drop issue http://goo.gl/aKc6h

--- a/web/css/legacy/collections.css
+++ b/web/css/legacy/collections.css
@@ -129,5 +129,6 @@
   padding-right: 12px;
   padding-left: 12px;
   float: left;
+  z-index: 100;
 }
 
